# pandas-uuid

./: # Pandas UUID dtype  .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  README.rst  biome.jsonc  pandas types.ipynb  pyproject.toml
.github/: no-pyarrow.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  pr.yml  release.yml  test.yml
docs/: api.md  api.rst  conf.py  example.rst  index.md  index.rst
docs/extensions/: resolve_from_map.py  typed_returns.py
docs/notebooks/: example.ipynb
src/pandas_uuid/: __init__.py  _pyarrow.py
src/testing/pandas_uuid/: __init__.py  _pytest.py
tests/: conftest.py  test_api.py  test_construct.py  test_construction.py  test_pyarrow_compat.py
