[build-system]
build-backend = "hatchling.build"
requires = ["hatch-docstring-description", "hatch-vcs", "hatchling"]

[project]
name = "pandas-uuid"
readme = "README.rst"
license = "MPL-2.0"
authors = [{ name = "Philipp A.", email = "flying-sheep@web.de" }]
requires-python = ">=3.12"
dynamic = ["description", "version"]
dependencies = ["numpy", "pandas"]
optional-dependencies.pyarrow = ["pyarrow"]

[dependency-groups]
typing = ["pyarrow-stubs"]

[tool.hatch.metadata.hooks.docstring-description]
[tool.hatch.version]
source = "vcs"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.14", "3.12"]
extras = ["pyarrow", "none"]
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.14"]
extras = ["pyarrow"]
deps = ["pre"]
[tool.hatch.envs.hatch-test]
dependency-groups = ["typing"]
extra-dependencies = ["ipykernel"]
[tool.hatch.envs.hatch-test.overrides]
matrix.extras.features = [{ if = ["pyarrow"], value = "pyarrow" }]
matrix.deps.env-vars = [
  { key = "UV_PRERELEASE", value = "allow", if = [
    "pre",
  ] },
]

[tool.ruff]
src = ["src"]
extend-include = ["*.ipynb"]
format.docstring-code-format = true
lint.select = ["ALL"]
lint.ignore = [
  "B019",    # functools.cache is fine to use
  "C408",    # dict(...) calls are good
  "COM812",  # Incompatible with formatter
  "D203",    # 0 instead of 1 blank lines before class docstring
  "D213",    # Multi-line docstring summary should start at the first instead of second line
  "FIX002",  # TODOs are fine
  "ISC001",  # Incompatible with formatter
  "PLC0415", # Non-top-level imports are fine
  "S603",    # We don’t want to use `subprocess.run(shell=True)`
  "S607",    # We don’t run commands with untrusted input
  "TD002",   # No need to assign TODOs to some person
]
lint.per-file-ignores."**/*.ipynb" = [
  "CPY001", # Missing copyright notice in notebook is fine
  "I002",   # Missing `from __future__ import annotations` is fine
]
lint.per-file-ignores."docs/conf.py" = [
  "INP001", # __init__.py
]
lint.per-file-ignores."src/pandas_uuid/__main__.py" = [
  "T201", # print is fine
]
lint.per-file-ignores."tests/*" = [
  "D102",   # Missing docstring in public method
  "D103",   # Missing docstring in public function
  "D105",   # Missing docstring in magic method
  "INP001", # __init__.py
  "RUF018", # assert with := is fine
  "S101",   # Use of assert
]
lint.allowed-confusables = ["×", "’"]
lint.flake8-copyright.notice-rgx = "SPDX-License-Identifier: MPL-2\\.0"
lint.isort.known-first-party = ["pandas_uuid"]
lint.isort.required-imports = ["from __future__ import annotations"]
lint.pylint.max-args = 7
lint.pylint.max-positional-args = 3
lint.flake8-type-checking.exempt-modules = []
lint.flake8-type-checking.strict = true

[tool.pytest]
strict = true
addopts = ["--import-mode=importlib"]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["pandas_uuid"]
patch = ["subprocess"]
omit = ["**/test_*.py"]

[tool.coverage.paths]
package = ["src/pandas_uuid", "*/pandas-uuid/src/pandas_uuid"]
tests = ["tests", "*/pandas_uuid/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
