[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
  "hatch-vcs",
  "hatch-docstring-description",
  "hatch-fancy-pypi-readme",
]

[project]
name = "pandas-uuid"
license = "MPL-2.0"
authors = [{ name = "Philipp A.", email = "flying-sheep@web.de" }]
requires-python = ">=3.12"
dynamic = ["description", "readme", "version"]
dependencies = ["numpy", "pandas"]
optional-dependencies.pyarrow = ["pyarrow"]
urls.Source = "https://github.com/scverse/pandas-uuid"
urls.Documentation = "https://icb-pandas-uuid.readthedocs.io/"

[dependency-groups]
doc = [
  "ipykernel",
  "matplotlib",          # social cards
  "pygments",            # code higlighting
  "sphinx>=9.0.4",
  "sphinx-book-theme",
  "sphinx-copybutton",
  "sphinx-tabs",
  "sphinxext-opengraph",
]
typing = ["pyarrow-stubs"]

[tool.hatch.build.targets.wheel]
packages = ["src/testing", "src/pandas_uuid"]
[tool.hatch.metadata.hooks.docstring-description]
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.rst"
start-after = ".. badges-end"
[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
installer = "uv"
dependency-groups = ["typing"]

[tool.hatch.envs.docs]
features = ["pyarrow"]
dependency-groups = ["typing", "doc"]
scripts.build = "sphinx-build -M html docs docs/_build -W {args}"
scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
scripts.clean = "git clean -fdX -- {args:docs}"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.14", "3.12"]
extras = ["pyarrow", "none"]
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.14"]
extras = ["pyarrow"]
deps = ["pre"]
[tool.hatch.envs.hatch-test]
default-args = []
dependency-groups = ["typing"]
extra-dependencies = ["ipykernel", "pytest-cov"] # for VS Code’s coverage
[tool.hatch.envs.hatch-test.overrides]
matrix.extras.features = [{ value = "pyarrow", if = ["pyarrow"] }]
# weirdly, uv pulls in pyarrow unless that constraint is specified,
# but seems to have no problem to just leave it out. why?
matrix.extras.env-vars = [
  { key = "UV_CONSTRAINT", value = ".github/no-pyarrow.txt", if = [
    "none",
  ] },
]
matrix.deps.env-vars = [
  { key = "UV_PRERELEASE", value = "allow", if = [
    "pre",
  ] },
]

[tool.ruff]
src = ["src"]
extend-include = ["*.ipynb"]
format.docstring-code-format = true
lint.select = ["ALL"]
# prevent preview rules from getting removed by RUF100
lint.external = ["CPY", "PLR0917"]
lint.ignore = [
  "B019",    # functools.cache is fine to use
  "C408",    # dict(...) calls are good
  "COM812",  # Incompatible with formatter
  "D203",    # 0 instead of 1 blank lines before class docstring
  "D213",    # Multi-line docstring summary should start at the first instead of second line
  "FIX002",  # TODOs are fine
  "ISC001",  # Incompatible with formatter
  "PLC0415", # Non-top-level imports are fine
  "S603",    # We don’t want to use `subprocess.run(shell=True)`
  "S607",    # We don’t run commands with untrusted input
  "TD002",   # No need to assign TODOs to some person
]
lint.per-file-ignores."**/*.ipynb" = [
  "CPY001", # Missing copyright notice in notebook is fine
  "I002",   # Missing `from __future__ import annotations` is fine
]
lint.per-file-ignores."docs/**/*.py" = [
  "INP001", # __init__.py
]
lint.per-file-ignores."src/pandas_uuid/__main__.py" = [
  "T201", # print is fine
]
lint.per-file-ignores."tests/*" = [
  "D102",    # Missing docstring in public method
  "D103",    # Missing docstring in public function
  "D105",    # Missing docstring in magic method
  "INP001",  # __init__.py
  "PLR0913", # Test may have many arguments
  "PLR0917", # Positional or keyword means nothing for tests
  "RUF018",  # assert with := is fine
  "S101",    # Use of assert
]
lint.allowed-confusables = ["×", "’"]
lint.flake8-copyright.notice-rgx = "SPDX-License-Identifier: MPL-2\\.0"
lint.isort.known-first-party = ["pandas_uuid"]
lint.isort.required-imports = ["from __future__ import annotations"]
lint.pylint.max-args = 7
lint.pylint.max-positional-args = 3
lint.flake8-type-checking.exempt-modules = []
lint.flake8-type-checking.strict = true

[tool.pytest]
strict = true
addopts = [
  "--import-mode=importlib",
  "--doctest-modules",
  "--doctest-glob=*.rst",
  "--ignore-glob=docs/extensions/**",
  "--ignore-glob=docs/_build/**",
  "-ptesting.pandas_uuid._pytest",
]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["pandas_uuid"]
patch = ["subprocess"]
omit = ["**/test_*.py", "**/testing/**/*.py"]
[tool.coverage.paths]
package = ["src/pandas_uuid", "*/pandas-uuid/src/pandas_uuid"]
tests = ["tests", "*/pandas_uuid/tests"]
[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
